add function to balance dataset by downsampling

--- a/training_model/CS3237_Project_accuracy.ipynb
+++ b/training_model/CS3237_Project_accuracy.ipynb
@@ -57,7 +57,7 @@
         "\n",
         "isGdrive = True"
       ],
-      "execution_count": 2,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -67,7 +67,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1dc4a18c-d0fe-47e2-a9f2-a916a0e5791d"
+        "outputId": "a20ac13b-160e-4b06-f5ae-e0c918c5a6ee"
       },
       "source": [
         "if isGdrive:\n",
@@ -87,7 +87,7 @@
         "    if not os.path.exists('graphs'):\n",
         "        os.makedirs('graphs')"
       ],
-      "execution_count": 3,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
         "if onlyNicholas:\n",
         "    df = df.drop([ i for i in range(99,249)])"
       ],
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -121,7 +121,7 @@
         "#drop invalid shots\n",
         "df = df.drop(df[(df['score'] != 1) & (df['score'] != 0)].index).reset_index(drop=True)"
       ],
-      "execution_count": 5,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -131,13 +131,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I6Ebm4ikQADz",
-        "outputId": "6eb01f37-8710-4133-faf4-a57228228fbd"
+        "outputId": "abd43d97-cecd-4688-a21d-07df8d626322"
       },
       "source": [
         "#sanity check for all invalid shots dropped\n",
         "df.score.unique()\n"
       ],
-      "execution_count": 6,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -149,7 +149,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 13
         }
       ]
     },
@@ -169,9 +169,18 @@
         "  df.reset_index(drop=True, inplace=True)\n",
         "  return df\n",
         "\n",
-        "df = upsample_scores(df)"
+        "def downsample_scores(df):\n",
+        "  count_miss, count_score = df.score.value_counts()\n",
+        "  df_majority = df[df.score==0]\n",
+        "  df_minority = df[df.score==1]\n",
+        "  df_majority_downsampled = resample(df_majority, replace=False, n_samples=count_score, random_state=123)\n",
+        "  df = pd.concat([df_majority_downsampled, df_minority]) \n",
+        "  df.reset_index(drop=True, inplace=True)\n",
+        "  return df\n",
+        "\n",
+        "df = downsample_scores(df)"
       ],
-      "execution_count": 7,
+      "execution_count": 14,
       "outputs": []
     },
     {
@@ -181,31 +190,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VLyTWCoXyfCD",
-        "outputId": "a82efc5c-3b0c-470c-f05f-73b23c4be648"
+        "outputId": "ebb68a24-3d9f-475f-acf4-17d0eaa5e1ee"
       },
       "source": [
-        "\n",
         "print(df)"
       ],
-      "execution_count": 8,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "                                                 light  ... score\n",
-            "0    {\"0\": [2.5, \"2020-10-25T11:06:50.069321\"], \"1\"...  ...     1\n",
-            "1    {\"0\": [0.08, \"2020-10-25T10:24:23.384299\"], \"1...  ...     1\n",
-            "2    {\"0\": [1.2, \"2020-10-25T10:54:23.922642\"], \"1\"...  ...     1\n",
-            "3    {\"0\": [2.5, \"2020-10-25T10:59:54.754913\"], \"1\"...  ...     1\n",
-            "4    {\"0\": [1.05, \"2020-10-25T11:01:02.375844\"], \"1...  ...     1\n",
+            "0    {\"0\": [0.08, \"2020-10-25T10:46:40.315969\"], \"1...  ...     0\n",
+            "1    {\"0\": [0.24, \"2020-10-25T09:24:31.389315\"], \"1...  ...     0\n",
+            "2    {\"0\": [0.73, \"2020-10-25T10:59:16.046529\"], \"1...  ...     0\n",
+            "3    {\"0\": [2.2600000000000002, \"2020-10-25T11:02:5...  ...     0\n",
+            "4    {\"0\": [6.04, \"2020-10-25T11:00:28.896957\"], \"1...  ...     0\n",
             "..                                                 ...  ...   ...\n",
-            "505  {\"0\": [7.49, \"2020-10-25T11:08:10.461677\"], \"1...  ...     0\n",
-            "506  {\"0\": [9.18, \"2020-10-25T11:08:20.721824\"], \"1...  ...     0\n",
-            "507  {\"0\": [0.08, \"2020-10-25T11:08:36.982468\"], \"1...  ...     0\n",
-            "508  {\"0\": [2.0100000000000002, \"2020-10-25T11:09:0...  ...     0\n",
-            "509  {\"0\": [0.08, \"2020-10-25T11:10:44.061164\"], \"1...  ...     0\n",
+            "223  {\"0\": [2.5, \"2020-10-25T11:06:50.069321\"], \"1\"...  ...     1\n",
+            "224  {\"0\": [10.81, \"2020-10-25T11:07:26.911040\"], \"...  ...     1\n",
+            "225  {\"0\": [4.6000000000000005, \"2020-10-25T11:08:2...  ...     1\n",
+            "226  {\"0\": [2.33, \"2020-10-25T11:08:45.268114\"], \"1...  ...     1\n",
+            "227  {\"0\": [5.15, \"2020-10-25T11:08:53.007532\"], \"1...  ...     1\n",
             "\n",
-            "[510 rows x 5 columns]\n"
+            "[228 rows x 5 columns]\n"
           ],
           "name": "stdout"
         }
